Minor bug content flickering

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1725,9 +1725,9 @@ input.common_modal {
   text-align: center;
   position: absolute;
   width: 90%;
-  left: 50%;
+  left: 5%;
   top: calc(50% - 100px);
-  transform: translate(-50%, 0);
+  transform: translate(0, 0);
   &__body {
     display: inline-block;
     text-align: center;
